--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,9 @@
-0.2.0 (to be released)
+0.2.0 (2017-06-24)
 ======================
 
 - Python 2 compat (issue #1)
 - Top-level YAML must be sequence (i.s.o. mapping) (issue #2)
+- Improve error messages (issue #3)
 
 
 0.1.1 (2017-06-14)
