Fix reporting error when model entry cotains more then one mapper

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+unreleased
+======================
+
+- Fix reporting error when model entry cotains more then one mapper
+
 0.3.0 (2017-06-28)
 ======================
 
