update CHANGES & AUTHORS and bump version to 0.8.0

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ answer newbie questions, and generally improved sqla_yaml_fixtures:
 
     Eduardo Naufel Schettino <http://schettino72.net>
     Just van den Broecke <http://www.justobjects.nl>
+    Tim Chen <timchen1@gmail.com>
