--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.8.0 (unreleased)
+======================
+
+- fix loading many relationships without backref
+
 0.7.0 (2017-09-01)
 ======================
 
