--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.9.0 (unreleased)
+======================
+
+- support loading many-to-many relationships (via secondary)
+
 0.8.0 (2018-01-03)
 ======================
 
