--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
 
 - drop support for python 3.4 and 3.5.
 - add support for python 3.7 and 3.8.
+- Suppress YAML unsafe load warning, support specify different loader
 
 
 0.9.1 (2018-07-26)
