--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
-1.0.0 (unreleased)
+1.0.0 (2021-02-04)
 ==================
 
-- drop support for python 3.4 and 3.5.
+- drop support for python 2.7, 3.4 and 3.5.
 - add support for python 3.7 and 3.8.
 - Suppress YAML unsafe load warning, support specify different loader
 
