--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+
+1.1.0 (2021-03-29)
+==================
+
+- add support for python 3.9.
+- Fix for removal of `_decl_class_registry` in SQLAlchemy 1.4.
+
+
 1.0.0 (2021-02-04)
 ==================
 
